--- a/akka-distributed-data/src/main/resources/reference.conf
+++ b/akka-distributed-data/src/main/resources/reference.conf
@@ -6,6 +6,7 @@
 # Make your edits/overrides in your application.conf.
 
 
+#//#distributed-data
 # Settings for the DistributedData extension
 akka.cluster.distributed-data {
   # Actor name of the Replicator actor, /user/replicator
@@ -17,8 +18,8 @@ akka.cluster.distributed-data {
   gossip-interval = 2 s
   # How often the subscribers will be notified of changes, if any
   notify-subscribers-interval = 500 ms
-  # Maximum number of entries to transfer in one gossip message when synchronizing the replicas.
-  # Next chunk will be transferred in next round of gossip.
+  # Maximum number of entries to transfer in one gossip message when synchronizing
+  # the replicas. Next chunk will be transferred in next round of gossip.
   max-delta-elements = 1000
   # How often the Replicator checks for pruning of data associated with
   # removed cluster nodes.
@@ -29,6 +30,7 @@ akka.cluster.distributed-data {
   # unreachable, so it should be configured to worst case in a healthy cluster.
   max-pruning-dissemination = 60 s
 }
+#//#distributed-data
 
 # Protobuf serializer for cluster DistributedData messages
 akka.actor {
