various small improvements based on Roland's comments

--- a/akka-distributed-data/src/main/resources/reference.conf
+++ b/akka-distributed-data/src/main/resources/reference.conf
@@ -9,7 +9,7 @@
 #//#distributed-data
 # Settings for the DistributedData extension
 akka.cluster.distributed-data {
-  # Actor name of the Replicator actor, /user/replicator
+  # Actor name of the Replicator actor, /system/replicator
   name = replicator
   # Replicas are running on members tagged with this role.
   # All members are used if undefined or empty.
