--- a/akka-distributed-data/src/main/resources/reference.conf
+++ b/akka-distributed-data/src/main/resources/reference.conf
@@ -11,24 +11,36 @@
 akka.cluster.distributed-data {
   # Actor name of the Replicator actor, /system/replicator
   name = replicator
+
   # Replicas are running on members tagged with this role.
   # All members are used if undefined or empty.
   role = ""
+
   # How often the Replicator should send out gossip information
   gossip-interval = 2 s
+
   # How often the subscribers will be notified of changes, if any
   notify-subscribers-interval = 500 ms
+
   # Maximum number of entries to transfer in one gossip message when synchronizing
   # the replicas. Next chunk will be transferred in next round of gossip.
   max-delta-elements = 1000
+  
+  # The id of the dispatcher to use for Replicator actors. If not specified
+  # default dispatcher is used.
+  # If specified you need to define the settings of the actual dispatcher.
+  use-dispatcher = ""
+
   # How often the Replicator checks for pruning of data associated with
   # removed cluster nodes.
   pruning-interval = 30 s
+  
   # How long time it takes (worst case) to spread the data to all other replica nodes.
   # This is used when initiating and completing the pruning process of data associated
   # with removed cluster nodes. The time measurement is stopped when any replica is 
   # unreachable, so it should be configured to worst case in a healthy cluster.
   max-pruning-dissemination = 60 s
+  
 }
 #//#distributed-data
 
